{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 212,
  "lineage": "d6cb1df1-7b9c-9a06-2a56-312c91acbc51",
  "resources": [
    {
      "module": "module.virtual_machine",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/vmnic",
            "internal_domain_name_suffix": "51l1s5ca4phefbcd05w3x0hlra.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my_nic_configuration",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/publicIPAddresses/my-public-ip",
                "subnet_id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myterrvnet/subnets/vmsubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-0D-3A-5A-83-42",
            "name": "vmnic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "myrg",
            "virtual_machine_id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Compute/virtualMachines/myvm"
          },
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name",
            "module.virtual_machine.azurerm_public_ip.my_public_ip",
            "module.vnet.azurerm_subnet.vmsubnet",
            "module.vnet.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/vmnic|/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/vmnsg",
            "network_interface_id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/vmnic",
            "network_security_group_id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/vmnsg"
          },
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name",
            "module.virtual_machine.azurerm_network_interface.vmnic",
            "module.virtual_machine.azurerm_public_ip.my_public_ip",
            "module.vnet.azurerm_network_security_group.vmnsg",
            "module.vnet.azurerm_subnet.vmsubnet",
            "module.vnet.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/publicIPAddresses/my-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.85.154.165",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "my-public-ip",
            "resource_group_name": "myrg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vmnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/vmnsg",
            "location": "westus",
            "name": "vmnsg",
            "resource_group_name": "myrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ConnectToVM",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "VMConnect",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "StoragetoVM",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "VMtoStorage",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "connectvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/vmnsg/securityRules/VMConnect",
            "name": "VMConnect",
            "network_security_group_name": "vmnsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "myrg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name",
            "module.vnet.azurerm_network_security_group.vmnsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "myinboundnsgrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.0.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/vmnsg/securityRules/StoragetoVM",
            "name": "StoragetoVM",
            "network_security_group_name": "vmnsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "myrg",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name",
            "module.vnet.azurerm_network_security_group.vmnsg",
            "module.vnet.azurerm_subnet.pesubnet",
            "module.vnet.azurerm_subnet.vmsubnet",
            "module.vnet.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "myoutboundnsgrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/vmnsg/securityRules/VMtoStorage",
            "name": "VMtoStorage",
            "network_security_group_name": "vmnsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "myrg",
            "source_address_prefix": "10.0.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name",
            "module.vnet.azurerm_network_security_group.vmnsg",
            "module.vnet.azurerm_subnet.pesubnet",
            "module.vnet.azurerm_subnet.vmsubnet",
            "module.vnet.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vmconnect",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/vmnsg/securityRules/ConnectToVM",
            "name": "ConnectToVM",
            "network_security_group_name": "vmnsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "myrg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name",
            "module.vnet.azurerm_network_security_group.vmnsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myterrvnet/subnets/pesubnet",
            "name": "pesubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myrg",
            "virtual_network_name": "myterrvnet"
          },
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name",
            "module.vnet.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myterrvnet/subnets/subnet3",
            "name": "subnet3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myrg",
            "virtual_network_name": "myterrvnet"
          },
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name",
            "module.vnet.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myterrvnet/subnets/subnet4",
            "name": "subnet4",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myrg",
            "virtual_network_name": "myterrvnet"
          },
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name",
            "module.vnet.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vmsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myterrvnet/subnets/vmsubnet",
            "name": "vmsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myrg",
            "virtual_network_name": "myterrvnet"
          },
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name",
            "module.vnet.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7cb9d7fe-f340-42ce-8443-d7eddbe8eb88",
            "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myterrvnet",
            "location": "westus",
            "name": "myterrvnet",
            "resource_group_name": "myrg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myterrvnet/subnets/vmsubnet",
                "name": "vmsubnet"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myterrvnet/subnets/pesubnet",
                "name": "pesubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myterrvnet/subnets/subnet3",
                "name": "subnet3"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/dd422a55-8a84-4b05-9926-ca9fb13424f4/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myterrvnet/subnets/subnet4",
                "name": "subnet4"
              }
            ]
          },
          "dependencies": [
            "module.my_resource_group.azurerm_resource_group.resource_group_name"
          ]
        }
      ]
    }
  ]
}